--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1628,6 +1628,10 @@ html {
     width: 60%;
   }
 
+  .sm\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .sm\:p-3 {
     padding: 0.75rem;
   }
@@ -1655,5 +1659,19 @@ html {
 
   .md\:w-12 {
     width: 3rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 }
