--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@ Profile
         <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5 hidden">Home</p>
     </div>
     <form action="/profile" method="post" class="flex items-center justify-center p-12" autocomplete="false">
-        <div class="p-8 rounded-2xl flex flex-col gap-8 w-3/4 sm:w-1/3">
+        <div class="p-8 rounded-2xl flex flex-col gap-8 w-3/4 lg:w-2/3">
             <div>
                 <label for="username" class="block text-slate-500">Username</label>
                 <input type="text" name="username" id="username" placeholder="Enter your username" autocomplete="off"
@@ -21,7 +21,7 @@ Profile
                 <p id="displayUserNameError" class="hidden text-red-400"></p>
             </div>
             <div class="flex items-center justify-center">
-                <button type="button" id="submitUsernameButton"
+                <button type="button" id="updateUsernameButton"
                     class="bg-purple-900 font-bold text-xl text-white p-2 px-12 rounded-2xl">Update Username</button>
             </div>
             <div>
@@ -52,7 +52,7 @@ Profile
                 <p id="displayConfirmError" class="hidden"></p>
             </div>
             <div class="flex items-center justify-center">
-                <button type="button" id="submitPasswordButton"
+                <button type="button" id="updatePasswordButton"
                     class="bg-purple-900 font-bold text-xl text-white p-2 px-12 rounded-2xl">Update Password</button>
             </div>
             <script>
@@ -60,8 +60,8 @@ Profile
                 const old_password = document.querySelector("#old_password");
                 const password = document.querySelector("#password");
                 const confirm_password = document.querySelector("#confirm_password");
-                const submitUsernameButton = document.querySelector("#submitUsernameButton");
-                const submitPasswordButton = document.querySelector("#submitPasswordButton");
+                const updateUsernameButton = document.querySelector("#updateUsernameButton");
+                const updatePasswordButton = document.querySelector("#updatePasswordButton");
                 let displayUserNameError = document.querySelector("#displayUserNameError");
                 let passwordEyeImage = document.querySelector("#passwordEyeImage");
                 let confirmEyeImage = document.querySelector("#confirmEyeImage");
@@ -129,7 +129,19 @@ Profile
                     displayUserNameError.classList.add("hidden");
                 }}
 
-            username.addEventListener("keyup", checkFormat());
+            username.addEventListener("keyup", () => {
+                checkFormat()
+            });
+
+            updateUsernameButton.addEventListener("click", () => {
+                if (username.value === "") {
+                    displayUserNameError.textContent = 'Username cannot be empty';
+                    displayUserNameError.classList.remove("hidden");
+                } else {
+                    checkFormat();
+                }
+            
+            })
 
             </script>
         </div>
