--- a/templates/quote.html
+++ b/templates/quote.html
@@ -13,7 +13,7 @@ Quote
             <a href="/"><img src="../assets/icons/back.svg" alt="back" onmouseover="addText('add')" onmouseout="addText('remove')"></a>
             <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5 hidden">Home</p>
         </div>
-        <form id="quoteForm" class="flex flex-col justify-center items-center gap-10 w-2/3 sm:w-3/5">
+        <form id="quoteForm" class="flex flex-col justify-center items-center gap-10 w-2/3 lg:w-3/5">
             <div class="w-full relative">
                 <label for="company_name" class="block text-slate-500 mb-2">Company</label>
                 <input type="text" name="company_name" id="company_name" placeholder="Input company name"
