--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@ Register
 
 {% block main %}
 <form class="flex items-center justify-center p-12">
-    <div class="border border-green-300 p-8 rounded-2xl flex flex-col gap-8 w-3/4 sm:w-1/3">
+    <div class="border border-green-300 p-8 rounded-2xl flex flex-col gap-8 w-3/4 lg:w-1/3">
         <div>
             <p class="text-black font-bold text-xl text-center">Register for an account</p>
         </div>
