--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@ Log In
                 class="bg-slate-200 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 outline-none p-2 w-full">
                 <img id="eyeImage" src="../assets/icons/eye_open.svg" alt="closed eye icon" onclick="toggleVisibility()" class="hover:cursor-pointer absolute top-0 right-0 m-2">
             </p>
-            <p id="displayError" class="hidden"></p>
+            <p id="displayError" class="hidden text-red-400"></p>
         </div>
         <div class="flex items-center justify-center">
             <button type="button" id="submitButton"
